# codex-skills-pack-shuo

./: .gitattributes  .gitignore  AGENTS.md  README.md  使用說明.txt
HAND-OFF/: SKILL.md
agent-db-safety/: SKILL.md
browser-harness/: .gitignore  README.md  SKILL.md  admin.py  daemon.py  helpers.py  install.md  pyproject.toml  run.py
browser-harness/domain-skills/amazon/: product-search.md
browser-harness/domain-skills/booking-com/: scraping.md
browser-harness/domain-skills/coursera/: scraping.md
browser-harness/domain-skills/craigslist/: scraping.md
browser-harness/domain-skills/duckduckgo/: scraping.md
browser-harness/domain-skills/etsy/: scraping.md
browser-harness/domain-skills/fred/: scraping.md
browser-harness/domain-skills/g2/: scraping.md
browser-harness/domain-skills/github/: scraping.md
browser-harness/domain-skills/glassdoor/: scraping.md
browser-harness/domain-skills/hackernews/: scraping.md
browser-harness/domain-skills/job-boards/: indeed-glassdoor.md
browser-harness/domain-skills/letterboxd/: scraping.md
browser-harness/domain-skills/macrotrends/: scraping.md
browser-harness/domain-skills/news-aggregation/: multi-source.md
browser-harness/domain-skills/producthunt/: scraping.md
browser-harness/domain-skills/spotify/: scraping.md
browser-harness/domain-skills/tiktok/: upload.md
browser-harness/domain-skills/tradingview/: scraping.md
browser-harness/domain-skills/trustpilot/: scraping.md
browser-harness/domain-skills/walmart/: scraping.md
browser-harness/interaction-skills/: connection.md  dialogs.md  screenshots.md
(+133 files in other folders)
